# MT-Facturation

./: .gitignore  Agents.md  journal.md  launch_all.bat  launch_all.sh  mustread.md  stack.md  stop_all.sh  tasks.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start-backend.bat
backend/alembic/: README.md  env.py
backend/alembic/versions/: README.md
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: authz.py  billing.py  catalog.py  collections.py  contract.py  conventions.py  customer.py  health.py  landing.py
backend/app/common/: __init__.py  api.py  auth.py  errors.py  observability.py
backend/app/core/: settings.py
backend/app/db/: __init__.py  base.py  bootstrap.py  session.py
backend/app/models/: __init__.py  billing.py  catalog.py  collections.py  contract.py  customer.py  landing.py
backend/app/schemas/: __init__.py  billing.py  catalog.py  collections.py  contract.py  customer.py  landing.py
backend/app/services/: billing_service.py  catalog_service.py  collections_service.py  contract_service.py  customer_service.py  landing_service.py
backend/docs/: db-migration-standards.md
backend/services/: README.md
backend/tests/: conftest.py  test_auth_and_conventions.py  test_billing_flow.py  test_collections_flow.py  test_contract_service.py  test_customer_catalog_contract.py  test_health.py  test_landing_flow.py  test_settings.py
docs/: api-process-map.md  api-reference.md  branching-policy.md  business-glossary.md  decision-log.md  documentation-workflow.md  (+4 more)
(+19 files in other folders)
